<resources>
    <string name="app_name">Dio</string>
    <string name="state_ready">접속대기</string>
    <string name="desc_code">코드</string>
    <string name="desc_name">이름</string>
    <string name="btn_connect">접속</string>
    <string name="state_connecting">연결중...</string>
    <string name="state_disconnected">접속끊김</string>
    <string name="state_connected">접속됨</string>
    <string name="state_error_and_disconnected">접속에 실패했습니다.</string>
    <string name="btn_disconnect">접속해제</string>
    <string name="invalid_code_or_name">Code는 숫자, Name는 영문/숫자만\n들어갈 수 있습니다.</string>
</resources>
