<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingTop="20dp"
                    tools:context=".activity.MainActivity">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="60dp"
                        android:contentDescription="logo"
                        android:src="@drawable/dio_logo" />

                    <TextView
                        android:id="@+id/tv_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:text="@string/state_ready" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/desc_code"
                            android:inputType="numberDecimal"
                            android:textSize="20sp" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/desc_name"
                            android:textSize="20sp" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_connect"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="200dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/btn_connect" />

                    <Button
                        android:id="@+id/btn_disconnect"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="200dp"
                        android:layout_height="60dp"
                        android:visibility="gone"
                        android:layout_marginTop="20dp"
                        android:text="@string/btn_disconnect" />
                </LinearLayout>

            </FrameLayout>
        </ScrollView>


        <RelativeLayout
            android:id="@+id/rl_loading_indicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99000000"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:progressDrawable="@drawable/circle_progress_bar" />

        </RelativeLayout>

    </FrameLayout>

</layout>